--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
+    "hydra-core>=1.3.2",
+    "matplotlib>=3.10.8",
     "torch==2.6.0",
     "typer==0.15.1",
     "uvicorn==0.34.0",
