--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -1,2 +1,9 @@
-defaults:
-    - experiment: exp1
+experiment:
+  model:
+    number_of_classes: 2
+  
+  training:
+    batch_size: 32
+    learning_rate: 0.001
+    epochs: 10
+    log_every_n_steps: 50
