--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,14 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
     "hydra-core>=1.3.2",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.8",
+    "python-dotenv>=1.2.1",
     "torch==2.6.0",
     "torchvision>=0.21.0",
     "typer==0.15.1",
     "uvicorn==0.34.0",
+    "wandb>=0.24.0",
 ]
 
 [dependency-groups]
