Checks code with ruff and mypy

--- a/.github/workflows/codecheck.yaml
+++ b/.github/workflows/codecheck.yaml
@@ -1,4 +1,4 @@
-name: "Run tests"
+name: "Run linting"
 
 on:
   push:
@@ -7,10 +7,11 @@ on:
     branches: [ master, main ]
 
 jobs:
-  build:
+  lint:
     runs-on: ${{ matrix.os }}
     
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.12"]
@@ -32,9 +33,11 @@ jobs:
       run: |
         uv sync --dev --locked
 
-    - name: Test with pytest
-      run: |
-        uv run pytest -v
+    - name: Ruff check
+      run: uv run ruff check .
 
+    - name: Ruff format check
+      run: uv run ruff format --check .
 
-        
+    - name: Type check with mypy
+      run: uv run mypy src/
