--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,12 @@ classifiers = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
     "hydra-core>=1.3.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
+    "pathspec<1.0.0",
     "python-dotenv>=1.2.1",
     "torch==2.6.0",
     "torchvision>=0.21.0",
