First API draft

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,11 @@ dependencies = [
     "matplotlib>=3.10.8",
     "pathspec<1.0.0",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.21",
     "torch==2.6.0",
     "torchvision>=0.21.0",
     "typer==0.15.1",
-    "uvicorn==0.34.0",
+    "uvicorn[standard]==0.34.0",
     "wandb>=0.24.0",
 ]
 
