--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,4 +29,9 @@ jobs:
       run: |
         uv run pytest -v
 
+    # Linting steps
+    - name: Ruff check
+      run: uv run ruff check .
 
+    - name: Ruff format
+      run: uv run ruff format .
