Downgrade ruff to 0.4.7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,75 @@ dev = [
     "mkdocs==1.6.1",
     "pre-commit==4.1.0",
     "pytest==8.3.4",
-    "ruff==0.1.3",
     "mkdocstrings-python==1.12.2",
 ]
 
+[tool.ruff]
+target-version = "py312"
+
+line-length = 120
+lint.select = [
+  "A",
+  "ASYNC",
+  "B",
+  "BLE",
+  "C4",
+  "C90",
+  "COM",
+  "D",
+  "DJ",
+  "DTZ",
+  "E",
+  "EM",
+  "ERA",
+  "EXE",
+  "F",
+  "FA",
+  "I",
+  "ICN",
+  "INT",
+  "ISC",
+  "LOG",
+  "N",
+  "PGH",
+  "PIE",
+  "PT",
+  "PYI",
+  "Q",
+  "RET",
+  "RSE",
+  "S",
+  "SIM",
+  "SLF",
+  "SLOT",
+  "T10",
+  "TCH",
+  "TID",
+  "UP",
+  "W",
+  "YTT",
+]
+lint.ignore = [
+  "B008",
+  "B028",
+  "B905",
+  "COM812",
+  "D100",
+  "D107",
+  "D211",
+  "D212",
+  "F821",
+  "F841",
+  "ISC001",
+  "S301",
+  "S311",
+  "S603",
+  "S605",
+  "S607",
+  "TC003",
+]
+lint.exclude = [ "student_repos/" ]
+lint.pydocstyle.convention = "google"
 
 [tool.uv.sources]
 torch = [
@@ -57,10 +122,6 @@ torchvision = [
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
 explicit = true
-
-[tool.ruff]
-line-length = 120
-lint.select = ["I"]
 
 [tool.coverage.run]
 omit = ["tests/*"]
