Added pre-commit with ruff and json

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,14 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: check-json
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.7
+    hooks:
+    # try to fix what is possible
+    -   id: ruff
+        args: ["--fix"]
+    # perform formatting updates
+    -   id: ruff-format
+    # validate if all is fine with preview mode
+    -   id: ruff
