--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
@@ -59,8 +59,71 @@ url = "https://download.pytorch.org/whl/cpu"
 explicit = true
 
 [tool.ruff]
+target-version = "py311"
+
 line-length = 120
-lint.select = ["I"]
+lint.select = [
+  "A",
+  "ASYNC",
+  "B",
+  "BLE",
+  "C4",
+  "C90",
+  "COM",
+  "D",
+  "DJ",
+  "DTZ",
+  "E",
+  "EM",
+  "ERA",
+  "EXE",
+  "F",
+  "FA",
+  "I",
+  "ICN",
+  "INT",
+  "ISC",
+  "LOG",
+  "N",
+  "PGH",
+  "PIE",
+  "PT",
+  "PYI",
+  "Q",
+  "RET",
+  "RSE",
+  "S",
+  "SIM",
+  "SLF",
+  "SLOT",
+  "T10",
+  "TCH",
+  "TID",
+  "UP",
+  "W",
+  "YTT",
+]
+lint.ignore = [
+  "B008",
+  "B028",
+  "B905",
+  "COM812",
+  "D100",
+  "D107",
+  "D211",
+  "D212",
+  "F821",
+  "F841",
+  "ISC001",
+  "S301",
+  "S311",
+  "S603",
+  "S605",
+  "S607",
+  "TC003",
+]
+lint.exclude = [ "student_repos/" ]
+lint.pydocstyle.convention = "google"
 
 [tool.coverage.run]
 omit = ["tests/*"]
