--- a/.github/workflows/pre_commit.yaml
+++ b/.github/workflows/pre_commit.yaml
@@ -13,17 +13,23 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
-        python-version: '3.12'
+        python-version: 3.11
 
-    - name: Install uv
-      uses: astral-sh/setup-uv@v4
+    - name: Install pre-commit
+      uses: pre-commit/action@v3.0.1
+#      with:
+#        continue-on-error: true
 
-    - name: Run pre-commit
-      run: |
-        uv tool install pre-commit
-        uv tool run pre-commit run --all-files
+#    - name: List modified files
+#      run: git diff --name-only
+
+#    - name: Commit changes
+#      uses: stefanzweifel/git-auto-commit-action@v5
+#      with:
+#        commit_message: Pre-commit fixes
+#        commit_options: '--no-verify'
