--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,8 +8,10 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
 
     steps:
     - name: Checkout
@@ -28,5 +30,3 @@ jobs:
     - name: Test with pytest
       run: |
         uv run pytest -v
-
-
