--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
+    "google-api-python-client>=2.188.0",
     "hydra-core>=1.3.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
