--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
     "google-api-python-client>=2.188.0",
+    "httpx>=0.28.1",
     "hydra-core>=1.3.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
