--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "google-api-python-client>=2.188.0",
     "httpx>=0.28.1",
     "hydra-core>=1.3.2",
+    "locust>=2.43.1",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
     "pathspec<1.0.0",
