--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,39 +1,21 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    id: 'Build API image'
-    args: [
-      'build',
-      '.',
-      '-t',
-      'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/api-image:latest',
-      '-f',
-      'dockerfiles/api.dockerfile'
-    ]
-
+    id: 'Build container image'
+    entrypoint: 'bash'
+    args:
+      - -c
+      - |
+          docker build \
+            -f dockerfiles/train.dockerfile \
+            -t europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/train-image:latest \
+            .
   - name: 'gcr.io/cloud-builders/docker'
-    id: 'Push API image'
+    id: 'Push container image'
     args: [
       'push',
-      'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/api-image:latest'
+      'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/train-image:latest'
     ]
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    id: 'Deploy to Cloud Run'
-    args: [
-      'run',
-      'deploy',
-      'mlops',
-      '--image',
-      'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/api-image:latest',
-      '--region',
-      'europe-west1',
-      '--platform',
-      'managed',
-      '--allow-unauthenticated'
-    ]
-
 options:
   logging: CLOUD_LOGGING_ONLY
-
 images:
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/api-image:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/container-registry/train-image:latest'
