--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,10 @@ dependencies = [
     "hydra-core>=1.3.2",
     "locust>=2.43.1",
     "loguru>=0.7.3",
+    "markdown>=3.10",
     "matplotlib>=3.10.8",
     "pathspec<1.0.0",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.21",
     "torch==2.6.0",
